--- a/Snake.html
+++ b/Snake.html
@@ -12,8 +12,9 @@
 
 </head>
 
-<body bgcolor="gray">
 
+<body bgcolor="gray">
+    <button onClick="window.location.reload();">Refresh Page</button>
 </body>
 <script src="snake.js"></script>
 <script src="main.js"></script>
